# greyscan

./: README.md  greyscan.py  pyproject.toml  scan_images.py
src/greyscan/: __init__.py  cli.py  scanner.py
