[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greyscan"
version = "0.1.0"
description = "Gray Bar Scanner for Image Files"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "opencv-python",
    "numpy",
    "tqdm",
]

[project.scripts]
greyscan = "greyscan.cli:main"
